# books_description_parser

./: Cargo.toml  Readme.md
src/: Makefile  grammar.pest  input.txt  lib.rs  main.rs
tests/: grammar_test.rs
