[package]
name = "books_description_parser"
version = "0.1.0"
edition = "2021"
licence = "MIT"
authors = ["Melnyk Danyil"]
description = "A Rust-based parser to extract book details from structured markdown-like text and output them in formats like JSON or Rust structs for further processing."
readme = "README.md"

[dependencies]
anyhow = "1.0.91"
pest = "2.7.14"
pest_derive = "2.7.14"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
